--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hokify/vuejs-datepicker": "^2.0.2",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "moment": "^2.26.0",
     "vue": "^2.6.11",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
